[FEAT] Skills update based on testers' feedback (#4560)
* [FEAT] Update Efficient Bin

* [FEAT] Update Coin Swindler description

* [FEAT] Update Fruit Turbocharge & Prime Produce description

* [FEAT] Fruity Profit update

* [FEAT] More Axes update

* [FEAT] Insta-Chop description

* [FEAT] Fruity Woody description

* [FEAT] Feller's Discount description

* [FEAT] Fishy Chance description

* [FEAT] Fishy Fortune description

* [FEAT] Frenzied Fish description

* [FEAT] More With Less missing skill

* [FEAT] Olive Express update

* [FEAT] Rice Rocket update

* [FEAT] Vine Velocity update

* [FEAT] Speed Miner description

* [FEAT] Double Nom description

* [FEAT] Sweet Bonus description

* [FEAT] Crop Processor Unit description

* [FEAT] Oil Extraction description

* [FEAT] add Leak-Proof Tank (WIP)

* [FEAT] Rapid Rig description

* [FEAT] Efficiency Extension Module description

* [FEAT] Vine Velocity missing save

* update More Axes description

* Crop Skill Translations

* [FEAT] Move Turbo Charged to Fruits

* [FEAT] Reset Skills limit 3months -> 5mins

* Leak Proof Tank

* Add Field Expansion Module

* Add barley to strong roots

* [FIX] getAvailableBumpkinSkillPoints

* [FEAT] Update tier unlock logic

* [FEAT] Update UI to handle tier unlock logic change

---------

Co-authored-by: eliasSFL <elias@sunflower-land.com>

--- a/public/offline.html
+++ b/public/offline.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -56,25 +56,24 @@
       }
 
       .outer-panel {
-  display: flex;
-  background-color: rgb(185 111 80);
-  border-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKAgMAAADwXCcuAAAACVBMVEUAAAAYFCXupGhEFGpVAAAAAXRSTlMAQObYZgAAABpJREFUCNdjYA1lYJBa5cCQwDABGwbJgdQAAKX2CF37xkC2AAAAAElFTkSuQmCC")
-    20% / 1 / 0 stretch;
-  border-style: solid;
-  border-width: 5.25px;
-  image-rendering: pixelated;
-  border-radius: 13.125px;
-  padding: 2.625px;
-  width: 100%;
-  max-width: fit-content;
-}
+        display: flex;
+        background-color: rgb(185 111 80);
+        border-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKAgMAAADwXCcuAAAACVBMVEUAAAAYFCXupGhEFGpVAAAAAXRSTlMAQObYZgAAABpJREFUCNdjYA1lYJBa5cCQwDABGwbJgdQAAKX2CF37xkC2AAAAAElFTkSuQmCC")
+          20% / 1 / 0 stretch;
+        border-style: solid;
+        border-width: 5.25px;
+        image-rendering: pixelated;
+        border-radius: 13.125px;
+        padding: 2.625px;
+        width: 100%;
+        max-width: fit-content;
+      }
 
-@media screen and (min-width: 768px) {
-  .outer-panel {
-    width: 50%;
-  }
-}
-
+      @media screen and (min-width: 768px) {
+        .outer-panel {
+          width: 50%;
+        }
+      }
 
       .inner-panel {
         background-color: rgb(194 134 105);
